[package]
name = "mirrorkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = "*"
notify = { version = "*", default-features = false, features = [
    "macos_kqueue",
] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["macros", "process"] }
simple_logger = "*"
log = "*"
uuid = { version = "*", features = ["serde", "v4"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = { version = "*", features = ["backtrace"] }
sha1 = "*"
hex = "*"
